# 10163250_CMakeProjectWarnings

./: CMakeLists.txt  CMakeProjectWarnings.cpp  CMakeProjectWarnings.h
